testsuite/tests/indexed-types/should_fail/BadFamInstDecl.hs
module BadFamInstDecl where
import BadFamInstDecl_aux

type instance T Int = Char
