testsuite/tests/indexed-types/should_fail/BadFamInstDecl.stderr
[1 of 2] Compiling BadFamInstDecl_aux ( BadFamInstDecl_aux.hs, BadFamInstDecl_aux.o )
[2 of 2] Compiling BadFamInstDecl   ( BadFamInstDecl.hs, BadFamInstDecl.o )

BadFamInstDecl.hs:4:1: error: [GHC-06206]
    • Illegal family instance for ‘T’
    • In the type instance declaration for ‘T’
    Suggested fix:
      Perhaps you intended to use the ‘TypeFamilies’ extension (implied by ‘TypeFamilyDependencies’)
